tests/ui/async-await/issues/issue-95307.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0121`.
